# roboy_vision

./: .gitignore  .gitmodules  CMakeLists.txt  FaceDetect.py  README.md  README.txt  face_detection.py  main.cpp  multiprocess.py  package.xml  readme.md  requirements.txt  run_roboy_nuke.sh
darknet/: Makefile  a.out  darknet
darknet/python/: darknet.py  darknet?.py
docs/: Doxyfile  conf.py  index.rst
docs/API-Docs/: _camera_8hpp_source.html  _core_8hpp_source.html  _mesh_8hpp_source.html  activation__layer_8h_source.html  activations_8h_source.html  annotated.html  avgpool__layer_8h_source.html  batchnorm__layer_8h_source.html  blas_8h_source.html  box_8h_source.html  class_face_detect_1_1_b_o_x.html  class_face_detect_1_1_i_m_a_g_e.html  class_face_detect_1_1_m_e_t_a_d_a_t_a.html  class_object_recognition_1_1_b_o_x.html  class_object_recognition_1_1_i_m_a_g_e.html  class_object_recognition_1_1_m_e_t_a_d_a_t_a.html  class_recognise_face_1_1_image_class.html  classdarknet_1_1_i_m_a_g_e.html  classdarknet_1_1_m_e_t_a_d_a_t_a.html  classes.html  classifier_8h_source.html  classsl_1_1_camera.html  classsl_1_1_init_parameters.html  classsl_1_1_mat.html  classsl_1_1_matrix3f.html  classsl_1_1_matrix4f.html  classsl_1_1_mesh.html  classsl_1_1_mesh_filter_parameters.html  classsl_1_1_orientation.html  classsl_1_1_pose.html  classsl_1_1_rotation.html  classsl_1_1_runtime_parameters.html  classsl_1_1_spatial_mapping_parameters.html  classsl_1_1_tracking_parameters.html  classsl_1_1_transform.html  classsl_1_1_translation.html  col2im_8h_source.html  connected__layer_8h_source.html  convolutional__layer_8h_source.html  cost__layer_8h_source.html  (+147 more)
docs/apidocs/: DescribeSceneSrv.rst  FaceDetect.rst  FindObjectSrv.rst  FreezeModel.rst  Multitracking.rst  NewFacialFeaturesMsg.rst  ObjectRecognition.rst  RecogniseFace.rst  RoboyVision.rst  RosMsgUtil.rst  SpeakerDetect.rst  TransformCoordinates.rst  Visualizer.rst  modules.rst  multiprocess.rst
docs/development/: 00_system_scope_and_context.rst  01_solution_strategy.rst  02_public_interfaces.rst  07_architecture_constraints.rst  08_conventions.rst  09_Libraries.rst  10_presentations.rst
docs/doxyxml/: _c_make_lists_8txt.xml  _camera_8hpp.xml  _core_8hpp.xml  _describe_scene_srv_8py.xml  _face_detect_8py.xml  _find_object_srv_8py.xml  _freeze_model_8py.xml  _mesh_8hpp.xml  _multitracking_8py.xml  _new_facial_features_msg_8py.xml  _object_recognition_8py.xml  _r_e_a_d_m_e_8md.xml  _recognise_face_8py.xml  _roboy_vision_8py.xml  _ros_msg_util_8py.xml  _visualizer_8py.xml  (+227 more)
documentation/: Doxyfile  index.rst
models/: download_models.py
msg/: ObjectKeypoints.msg  ObjectPose.msg  VisionObject.msg
src/: DescribeSceneSrv.py  DescribeSceneSrv_Old.py  DetectFaceSrv.py  FaceDetect.py  FindObjectSrv.py  FrameStreamer.py  FreezeModel.py  GetObjectSrv.py  LookAtSpeakerSrv.py  Multitracking.py  NewFacialFeaturesMsg.py  ObjectRecognition.py  RecogniseFace.py  RoboyAdapter.cpp  RoboyAdapter.h  RoboyVision.py  RosMsgUtil.py  Ros_Advertiser.py  Ros_Publisher.py  SendCoordinates.py  SpeakerDetect.py  TODO.txt  TrainedModel.pki  TrainedModel.pkl  TrainedModel_1.pkl  TransformCoordinates.py  VisionSrv.py  Visualizer.py  advertiser.py  face_detection.py  launch rosbridge_server rosbridge_websocket.launch -v  main.cpp  mtcnn_detector.py  multiprocess.py  numpy_msg.py  ros_publisher.py  ros_publisher_notneeded.py  setup  test.py  test_zed.py
src/roboy_snapchat_filter/: CMakeLists.txt  package.xml
src/roboy_snapchat_filter/launch/: roboy_snapchat_filter.launch  speech_recognition+leds.launch
src/roboy_snapchat_filter/scripts/: rospy  snapchat_server.py  snapchat_server2.py
src/vision_service/: CMakeLists.txt  package.xml
src/vision_service/msg/: FaceCoordinates.msg  NewFacialFeatures.msg  vision_object.msg
src/vision_service/scripts/: face_detection.py  face_detector.py  face_recognizer.py
src/vision_service/srv/: DescribeScene.srv  FindObject.srv  LookAtSpeaker.srv  describeScene.srv  wakeup.srv
srv/: recognition.srv
tutorials/: 01_Face_Detection.ipynb  02_Facenet_Embeddings_DLib.ipynb  02_Facenet_Embeddings_MTCNN.ipynb  03_Classifier_Training.ipynb  04_Face_Recognition.ipynb  FaceNet_Training.ipynb  Face_Detection.ipynb  Face_Recognition.ipynb  Facenet_Embeddings.ipynb  Facenet_Embeddings_DLib.ipynb  Facenet_Embeddings_mtcnn.ipynb
(+125 files in other folders)
