<?xml version="1.0"?>
<package>
  <name>roboy_snapchat_filter</name>
  <version>0.0.1</version>
  <description>Including the selection of snapchat filter into conversation</description>

  <maintainer email="s.riegelbauer@tum.de">Sebastian Riegelbauer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roboy_communication_cognition</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roboy_communication_cognition</run_depend>

</package>